fix collapsed view

--- a/src/App.css
+++ b/src/App.css
@@ -410,7 +410,7 @@ button{
 .mini-list{
   display: flex;
   flex-direction: column;
-  gap:7px;
+  gap:8px;
   font-size: 15px;
   margin-top: 15px;
   align-items: center;
